font-weight and banner spacing fixed

--- a/assets/css/profiles/roksolana.css
+++ b/assets/css/profiles/roksolana.css
@@ -14,6 +14,7 @@ font-family: 'Karbon';
       local('Karbon'),
       local('Karbon'),
       url("../../fonts/Karbon-Light.otf");
+      ;
 }
 
 @font-face{
@@ -21,7 +22,7 @@ font-family: 'Karbon';
   src:
       local("Proxima-Nova-Regular")
       local("Proxima-Nova-Regular")
-      url("../../fonts/Mark Simonson - Proxima Nova Regular.otf")
+      url("../../fonts/Mark Simonson - Proxima Nova Light.otf");
 
   ;
 
@@ -32,14 +33,37 @@ font-family: 'Karbon';
   src:
       local("Proxima-Nova-Semibold")
       local("Proxima-Nova-Semibold")
-      url("../../fonts/Mark Simonson - Proxima Nova Semibold.otf")
+      url("../../fonts/Mark Simonson - Proxima Nova Alt Light.otf");
+;
+}
 
-  ;
-
+@font-face{
+	font-family: 'Proxima-Nova-Light';
+	src:
+	local('Proxima-Nova-Light'),
+	local('Proxima-Nova-Light'),
+	url('../../fonts/Mark Simonson - Proxima Nova Alt Light.otf');
+	;
 }
 
 
 
+#subhead{
+	font-family: 'Proxima-Nova-Light';
+	font-size: 22px;
+	text-align: center;
+	color: white;
+	position: absolute;
+	top: 110px;
+	left: 950px;
+	transform: translate(-50%, -50%);
+	margin-top: 7px;
+}
+
+#logo-img{
+	margin-top: 45px;
+
+}
 
 body{
 	margin-left: 100px;
@@ -69,7 +93,7 @@ body{
 
 .header{
 	position: relative;
-	background-image: url("../../imgs/profiles/head.jpg");
+	background-image: url("../../imgs/profiles/header.jpg");
 	width: 100%;
 	height: 185px;
 	background-color: #ffffff; 
@@ -158,7 +182,7 @@ body{
 	max-width: 650px;
 }
 .one{
-	font-family: Proxima Nova;
+	font-family: 'Proxima-Nova-Semibold';
 	font-size: 24px;
 	text-align: left;
 	margin-bottom: 0px;	
@@ -166,7 +190,7 @@ body{
 }
 
 .two{
-	font-family: Proxima Nova;
+	font-family: 'Proxima-Nova-Regular';
 	font-size: 19px;
 	text-align: left;
 	margin-bottom: 40px;
